--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,5 +1,7 @@
 <h1>List of Photos</h1>
 
+<p><a class="btn btn-primary" href="/new_photo_form">Add A New photo</a></p>
+
 <table>
   <tr>
     <th>Thumbnail</th>
@@ -15,13 +17,13 @@
       <%= photo.caption %>
     </td>
     <td>
-      <a href="http://localhost:3000/photo_details/<%= photo.id %>">Show</a>
+      <a href="/photo_details/<%= photo.id %>">Show</a>
     </td>
     <td>
-      <a href="http://localhost:3000/edit_photo_form/<%= photo.id %>">Edit</a>
+      <a href="/edit_photo_form/<%= photo.id %>">Edit</a>
     </td>
     <td>
-      <a href="http://localhost:3000/delete_photo/<%= photo.id %>">Delete</a>
+      <a href="/delete_photo/<%= photo.id %>">Delete</a>
     </td>
   </tr>
 <% end %>
